[package]
name = "indexer"
version = "0.1.2"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"
repository = "https://github.com/mambisi/json_indexer"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/indexer"
readme = "README.md"
description = "This crate allows you to create an index (a multi-value sorted map) based on serde json values."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "1.0"
indexmap = {version = "1.3.2", features = ["rayon", "serde-1"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive","rc"] }
json_dotpath = "1.0.3"
rayon = "1.3.0"
[dev-dependencies]
log = "0.4.0"
env_logger = "0.7.1"